--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 ./Solution-GA_for_FO.ipynb
 ./Solution-ILS_for_the_TSP.ipynb
+Solution-ILS_for_the_TSP.ipynb
+./Solution-ILS_for_the_TSP.ipynb
+Solution-GA_for_FO.ipynb
+./Solution-GA_for_FO.ipynb
